# Simple-RPG-Game

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  VERSION  build-linux.sh  build-windows.sh  build.sh
assets/ASCII_Arts/: Ground.txt  title.txt
assets/music/: AudioCopyright.md
include/: Game.hpp
include/Audio/: BGMPlayer.hpp
include/Characters/: Entity.hpp  Player.hpp
include/Interfaces/: InputManager.hpp  MainMenu.hpp  OutputManager.hpp  PlayerMenu.hpp
include/Mechanics/: Area.hpp  Exploration.hpp  Map.hpp
include/States/: ExplorationState.hpp  MainMenuState.hpp  PlayState.hpp  State.hpp
lib/: Game.cpp
lib/Audio/: BGMPlayer.cpp
lib/Characters/: Entity.cpp  Player.cpp
lib/Mechanics/: Exploration.cpp  Map.cpp
lib/States/: ExplorationState.cpp  MainMenuState.cpp  PlayState.cpp
lib/interfaces/: InputManager.cpp  MainMenu.cpp  OutputManager.cpp
src/: main.cpp
